--- a/src/pages/login.css
+++ b/src/pages/login.css
@@ -4,12 +4,29 @@
     align-items: center;
     justify-content: center;
     height: 100vh;
+    background-color: #dbd5d5;
+}
 
+.container{
+    width: 500px;
+    background-color: white;
+    border-radius: 10px;
+    box-shadow: 0px -1px 38px 1px rgba(0,0,0,0.83);
+    -webkit-box-shadow: 0px -1px 38px 1px rgba(0,0,0,0.83);
+    -moz-box-shadow: 0px -1px 38px 1px rgba(0,0,0,0.83);
 }
 
 .header{
     font-size: 2.5rem;
     font-weight: 700;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-bottom: 10px;
+}
+
+.line{
+    border: 1px solid black;
 }
 
 .form{
@@ -17,12 +34,7 @@
     align-items: center;
     flex-direction: column;
     justify-content: space-between;
-    padding: 50px;
-    width: 500px;
-    background-color: #dbd5d5;
-    border-radius: 5px;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-    position: relative;
+    padding: 30px;
 }
 
 /* .label{
@@ -42,7 +54,7 @@
     width: 300px;
     height: 30px;
     padding: 10px;
-    border-radius: 3px;
+    border-radius: 5px;
     border: none;
     border-bottom: 1px solid gray;
     background: transparent;
@@ -50,7 +62,7 @@
 
 .inputField:focus{
     outline: none;
-    border-bottom: 1px solid green;
+    border-bottom: 2px solid green;
 }
 
 .submit{
@@ -61,11 +73,15 @@
     border-radius: 5px;
     border: none;
     cursor: pointer;
+    color: white;
+    font-weight: 600;
 }
 
 .forgot-link {
     text-align: center;
-    margin-top: 20px;
+    margin-top: 25px;
+    color: blue;
+    font-size: 15px;
   }
   
   .forgot-link a {
